--- a/index.html
+++ b/index.html
@@ -475,22 +475,24 @@ const recipes = [
     time: '1 hr 30 min'
   }
 ];
+
+const shopItems = [
+  { id:'rice1', name:'Basmati Rice 2kg', price:200, image:'https://raw.githubusercontent.com/1collins/image/e88660bef9ec7d9770d55454ac4a1157a51ecca2/collins%20var/IMG-20251020-WA0001.jpg' },
+  { id:'pilau-spice', name:'Pilau Masala 100g', price:60, image:'https://raw.githubusercontent.com/1collins/image/e88660bef9ec7d9770d55454ac4a1157a51ecca2/collins%20var/IMG-20251020-WA0002.jpg' },
+  { id:'onion1', name:'Onions 1kg', price:60, image:'https://raw.githubusercontent.com/1collins/image/e88660bef9ec7d9770d55454ac4a1157a51ecca2/collins%20var/IMG-20251020-WA0003.jpg' },
+  { id:'salt1', name:'Salt 1kg', price:30, image:'https://raw.githubusercontent.com/1collins/image/e88660bef9ec7d9770d55454ac4a1157a51ecca2/collins%20var/IMG-20251020-WA0005.jpg' },
+  { id:'garlic1', name:'Garlic paste 200g', price:80, image:'https://raw.githubusercontent.com/1collins/image/e88660bef9ec7d9770d55454ac4a1157a51ecca2/collins%20var/IMG-20251020-WA0007.jpg' },
+  { id:'chicken1', name:'Chicken 1kg', price:450, image:'https://raw.githubusercontent.com/1collins/image/e88660bef9ec7d9770d55454ac4a1157a51ecca2/collins%20var/IMG-20251020-WA0008.jpg' },
+  { id:'maize1', name:'Maize meal 2kg', price:150, image:'https://raw.githubusercontent.com/1collins/image/e88660bef9ec7d9770d55454ac4a1157a51ecca2/collins%20var/IMG-20251020-WA0009.jpg' },
+  { id:'flour1', name:'All-purpose flour 2kg', price:220, image:'https://raw.githubusercontent.com/1collins/image/e88660bef9ec7d9770d55454ac4a1157a51ecca2/collins%20var/IMG-20251020-WA0010.jpg' },
+  { id:'oil1', name:'Cooking oil 1L', price:350, image:'https://raw.githubusercontent.com/1collins/image/e88660bef9ec7d9770d55454ac4a1157a51ecca2/collins%20var/IMG-20251020-WA0014.jpg' },
+  { id:'noodles1', name:'Instant noodles (1pc)', price:70, image:'https://raw.githubusercontent.com/1collins/image/e88660bef9ec7d9770d55454ac4a1157a51ecca2/collins%20var/IMG-20251020-WA0015.jpg' },
+  { id:'veg1', name:'Mixed veg 500g', price:120, image:'https://raw.githubusercontent.com/1collins/image/e88660bef9ec7d9770d55454ac4a1157a51ecca2/collins%20var/IMG-20251020-WA0016.jpg' }
+];
    
 
   
-const shopItems = [
-  { id:'rice1', name:'Basmati Rice 2kg', price:200, image:'https://YOUR_GITHUB_IMAGE_URL/rice1.jpg' },
-  { id:'pilau-spice', name:'Pilau Masala 100g', price:60, image:'https://YOUR_GITHUB_IMAGE_URL/pilau-masala.jpg' },
-  { id:'onion1', name:'Onions 1kg', price:60, image:'https://YOUR_GITHUB_IMAGE_URL/onions.jpg' },
-  { id:'salt1', name:'Salt 1kg', price:30, image:'https://YOUR_GITHUB_IMAGE_URL/salt.jpg' },
-  { id:'garlic1', name:'Garlic paste 200g', price:80, image:'https://YOUR_GITHUB_IMAGE_URL/garlic.jpg' },
-  { id:'chicken1', name:'Chicken 1kg', price:450, image:'https://YOUR_GITHUB_IMAGE_URL/chicken.jpg' },
-  { id:'maize1', name:'Maize meal 2kg', price:150, image:'https://YOUR_GITHUB_IMAGE_URL/maize-meal.jpg' },
-  { id:'flour1', name:'All-purpose flour 2kg', price:220, image:'https://YOUR_GITHUB_IMAGE_URL/flour.jpg' },
-  { id:'oil1', name:'Cooking oil 1L', price:350, image:'https://YOUR_GITHUB_IMAGE_URL/oil.jpg' },
-  { id:'noodles1', name:'Instant noodles (1pc)', price:70, image:'https://YOUR_GITHUB_IMAGE_URL/noodles.jpg' },
-  { id:'veg1', name:'Mixed veg 500g', price:120, image:'https://YOUR_GITHUB_IMAGE_URL/veg.jpg' }
-];
+
 
 
 ];
