--- a/index.html
+++ b/index.html
@@ -32,17 +32,277 @@
   <button class="tab" data-target="shop">Shop</button>
   <button class="tab" data-target="gas">Gas</button>
 </nav>
+  const recipes = [
+  {
+    id: 'beef-pilau',
+    title: 'Beef Pilau',
+    image: 'https://img-global.cpcdn.com/recipes/1b7f76052ea23f19/300x426cq80/beef-pilau-recipe-main-photo.webp',
+    ingredients: [
+      {name: '2 cups rice', shopId: 'rice1'},
+      {name: '150 g boiled beef'},
+      {name: 'Pilau masala'},
+      {name: '2 large chopped onion', shopId: 'onion1'},
+      {name: '2 tbs garlic paste'},
+      {name: '1 tbs ginger paste'},
+      {name: '3 tbs cooking oil', shopId: 'oil1'},
+      {name: '4 cups boiled water / bone broth'},
+      {name: 'Salt'}
+    ],
+    steps: [
+      'In a pan add the cooking oil and the chopped onions.',
+      'Cook until lightly brown, add ginger and garlic paste.',
+      'Cook until golden brown; add boiled beef, pilau masala, salt and rice.',
+      'Add bone broth / water and cook under low heat until rice is done.',
+      'Serve and enjoy. (Serve with kachumbari and ripe banana.)',
+      'Note: the brown colour comes from golden onions, not the pilau masala.'
+    ],
+    time: '1 hr'
+  },
 
-<section id="recipes" class="active">
-  <h2>Easy Student Recipes 🍚</h2>
-  <p>Cook fast, eat fresh! Simple meals in minutes.</p>
-  <ul>
-    <li>Pilau Rice — Spiced and ready in 20 mins</li>
-    <li>Chapati — Soft and golden flatbread</li>
-    <li>Egg Curry — Protein boost in a pan</li>
-    <li>Ugali & Sukuma — Kenyan classic for energy</li>
-  </ul>
-</section>
+  {
+    id: 'chicken-potato-curry',
+    title: 'Chicken & Potato Curry',
+    image: 'https://img-global.cpcdn.com/recipes/3456f5862a69e922/300x426cq80/chicken-and-potato-curry-recipe-main-photo.webp',
+    ingredients: [
+      {name: '500 g chicken (thighs or breasts)'},
+      {name: '2-4 medium potatoes, peeled & cubed'},
+      {name: '1 large onion, chopped', shopId: 'onion1'},
+      {name: '2 garlic cloves, minced'},
+      {name: '1-inch ginger, grated'},
+      {name: '2 tbs curry powder'},
+      {name: '1 tsp turmeric powder'},
+      {name: '1 tsp cumin seeds (optional)'},
+      {name: '1 can (400 ml) coconut milk'},
+      {name: '1 cup chicken broth or water'},
+      {name: 'Salt & pepper to taste'},
+      {name: 'Fresh coriander for garnish'}
+    ],
+    steps: [
+      'Prep ingredients: cut chicken, cube potatoes, chop onion, mince garlic, grate ginger.',
+      'Heat oil, add cumin seeds to sizzle, add onion and sauté until golden.',
+      'Stir in garlic, ginger and chilies. Add curry powder & turmeric; toast 30s.',
+      'Add chicken, brown 5-7 min. Add potatoes, coconut milk and broth; season.',
+      'Simmer 20-25 min until potatoes tender and chicken cooked.',
+      'Garnish with coriander and serve with rice/ugali/chapati.'
+    ],
+    time: '45 min'
+  },
+
+  {
+    id: 'swahili-chicken-biryani',
+    title: 'Swahili Chicken Biryani',
+    image: 'https://img-global.cpcdn.com/recipes/9c1df591132918a4/300x426cq80/swahili-chicken-biryani-recipe-main-photo.webp',
+    ingredients: [
+      {name: '1.5 kg chicken'},
+      {name: '4 cans crushed tomatoes (or 8-10 fresh tomatoes)'},
+      {name: '2 small cans tomato paste'},
+      {name: '4 large onions', shopId: 'onion1'},
+      {name: '1 tsp ginger & garlic paste'},
+      {name: '1 tbsp ghee or cooking oil', shopId: 'oil1'},
+      {name: '1/2 glass plain yoghurt'},
+      {name: '6 eggs'},
+      {name: '3 cups basmati rice', shopId: 'rice1'},
+      {name: 'bay leaf, thyme, cinnamon, green cardamom pods'},
+      {name: 'Salt & spices'}
+    ],
+    steps: [
+      'Wash and soak rice 30 min. Par-boil rice and drain.',
+      'Boil eggs, peel and set aside. Brown onions in oil and set aside.',
+      'Make tomato sauce: cook crushed tomatoes and paste until oil rises.',
+      'Spice sauce with garam masala, biryani masala, turmeric, coriander, stock cubes.',
+      'Add boiled chicken to sauce with yoghurt, simmer until tender.',
+      'Layer par-cooked rice and sauce; bake or steam covered until fully cooked.',
+      'Mix gently, add boiled eggs and garnish with coriander.'
+    ],
+    time: '1 hr 25 min'
+  },
+
+  {
+    id: 'ugali-greens-pork',
+    title: 'Ugali, Greens & Pork',
+    image: 'https://img-global.cpcdn.com/recipes/765a241811a7d3e2/300x426f0.5_0.5_1.0q80/ugaligreens-pork-recipe-main-photo.webp',
+    ingredients: [
+      {name: '300 g maize flour (for ugali)', shopId: 'maize1'},
+      {name: '4 bunches kales / spinach', shopId: 'veg1'},
+      {name: '1/2 kg pork'},
+      {name: '1 onion', shopId: 'onion1'},
+      {name: '2 tomatoes'},
+      {name: '1 bunch coriander'},
+      {name: 'Spices: black pepper, ginger, cayenne, salt'}
+    ],
+    steps: [
+      'Clean pork; simmer to reduce excess water and partially cook.',
+      'Add onion, garlic and spices; cook until flavours blend.',
+      'Add tomatoes and mchuzi mix; simmer a few minutes.',
+      'Stir in chopped coriander and serve with ugali and steamed greens.'
+    ],
+    time: '1 hr'
+  },
+
+  {
+    id: 'ugali-basic',
+    title: 'Ugali (Basic)',
+    image: 'https://img-global.cpcdn.com/recipes/260568fdfcdfb88c/300x426cq80/ugali-recipe-main-photo.webp',
+    ingredients: [
+      {name: 'Maize flour', shopId: 'maize1'},
+      {name: 'Water'}
+    ],
+    steps: [
+      'Boil water in a deep pan.',
+      'Add maize flour slowly while stirring vigorously with a wooden spoon.',
+      'Cook until firm, press against sides to break lumps and cook 2-3 more minutes.',
+      'Turn out and serve.'
+    ]
+  },
+
+  {
+    id: 'ugali-steamed-kales',
+    title: 'Ugali & Steamed Kales',
+    image: 'https://img-global.cpcdn.com/recipes/e75d4cb3bdc30c85/300x426cq80/ugali-and-steamed-kales-recipe-main-photo.webp',
+    ingredients: [
+      {name: 'Hostess maize flour (1 cup)', shopId: 'maize1'},
+      {name: 'Kales', shopId: 'veg1'},
+      {name: 'Cooking oil'},
+      {name: 'Salt'}
+    ],
+    steps: [
+      'Boil water, add flour gradually until desired thickness.',
+      'Cook 10 minutes and set aside.',
+      'Heat oil, add sliced kales, cover and steam 10 minutes.',
+      'Serve with ugali.'
+    ]
+  },
+
+  {
+    id: 'ugali-liver',
+    title: 'Ugali, Steamed Kales & Liver',
+    image: 'https://img-global.cpcdn.com/recipes/96ba99b07919d352/300x426cq80/ugali-steamed-kales-and-liver-recipe-main-photo.webp',
+    ingredients: [
+      {name: 'Ready ugali'},
+      {name: 'Kales', shopId: 'veg1'},
+      {name: '1 tomato'},
+      {name: '1 onion', shopId: 'onion1'},
+      {name: 'Cooking oil'}
+    ],
+    steps: [
+      'Steam kales.',
+      'Fry onion until golden, add tomato and cook.',
+      'Add pre-boiled liver and simmer 8 minutes, serve.'
+    ]
+  },
+
+  {
+    id: 'ugali-omena-sukuma',
+    title: 'Ugali, Omena & Sukuma',
+    image: 'https://img-global.cpcdn.com/recipes/0a6a9c2483569e48/300x426cq80/githeri-recipe-main-photo.webp',
+    ingredients: [
+      {name: '250 g maize flour', shopId: 'maize1'},
+      {name: '1/4 kg omena'},
+      {name: '2 tomatoes'},
+      {name: 'Onions'},
+      {name: 'Kales', shopId: 'veg1'},
+      {name: 'Spices & oil'}
+    ],
+    steps: [
+      'Prepare ugali as usual.',
+      'Clean and dry-fry omena, then fry with onions and tomatoes.',
+      'Cook sukuma (kales) separately and serve alongside.'
+    ]
+  },
+
+  {
+    id: 'ugali-mayai-kales',
+    title: 'Ugali, Mayai & Steamed Kales',
+    image: 'https://img-global.cpcdn.com/recipes/35761b2bdf0b5b67/300x426cq80/ugali-mayai-na-steamed-kales-recipe-main-photo.webp',
+    ingredients: [
+      {name: 'Maize flour', shopId: 'maize1'},
+      {name: '2 eggs'},
+      {name: '1 tomato'},
+      {name: '1 medium onion', shopId: 'onion1'},
+      {name: 'Kales', shopId: 'veg1'}
+    ],
+    steps: [
+      'Prepare ugali.',
+      'Fry onion, add tomato then beaten eggs and cook.',
+      'Steam kales for 5 minutes, serve.'
+    ]
+  },
+
+  {
+    id: 'scrambled-eggs-ugali',
+    title: 'Scrambled Eggs & Ugali',
+    image: 'https://img-global.cpcdn.com/recipes/bc0b2ad7cde408b3/300x426cq80/scrambled-eggsugali-endofyearchallenge-recipe-main-photo.webp',
+    ingredients: [
+      {name: '4 eggs'},
+      {name: '2 cubes Royco (stock)'},
+      {name: '1 onion', shopId: 'onion1'},
+      {name: '2 tomatoes'},
+      {name: '2 tsp cooking oil', shopId: 'oil1'},
+      {name: 'Salt'}
+    ],
+    steps: [
+      'Chop onion and tomato. Fry onion until golden.',
+      'Add tomato, salt, stock cubes; simmer.',
+      'Add beaten eggs and stir until cooked. Serve with ugali.'
+    ],
+    time: '10 min'
+  },
+
+  {
+    id: 'eggless-pancakes',
+    title: 'Eggless & Dairy-Free Fluffy Pancakes',
+    image: 'https://img-global.cpcdn.com/recipes/ac58ac365ffce444/300x426f0.512567_0.5_1.0q80/eggless-and-dairy-free-fluffy-pancakes-recipe-main-photo.webp',
+    ingredients: [
+      {name: '2 cups all-purpose flour', shopId: 'flour1'},
+      {name: '4 tbsp sugar'},
+      {name: '4 tsp baking powder'},
+      {name: '1/2 tsp salt'},
+      {name: '2 cups water'},
+      {name: '4 tbsp oil', shopId: 'oil1'},
+      {name: '2 tsp vanilla (optional)'}
+    ],
+    steps: [
+      'Whisk dry ingredients, add water, oil and vanilla; rest 5 minutes.',
+      'Cook 1/4 cup batter per pancake until bubbles form, flip and cook until golden.'
+    ]
+  },
+
+  {
+    id: 'blueberry-mini-pancakes',
+    title: 'Eggless Blueberry Mini Pancakes',
+    image: 'https://img-global.cpcdn.com/recipes/d7ac2ef1bd4e54ab/300x426cq80/eggless-blueberry-mini-pancakes-recipe-main-photo.webp',
+    ingredients: [
+      {name: '1.5 cups flour', shopId: 'flour1'},
+      {name: '2 tsp baking powder'},
+      {name: '2 tbsp oil', shopId: 'oil1'},
+      {name: '1 cup milk'},
+      {name: '1/8 cup blueberries'}
+    ],
+    steps: [
+      'Mix ingredients, rest 5 min. Spoon batter onto pan and cook 2-3 minutes each side.',
+      'Serve warm with tea.'
+    ],
+    time: '25 min'
+  },
+
+  {
+    id: 'chicken-stew',
+    title: 'Chicken Stew',
+    image: 'https://images.unsplash.com/photo-1546069901-eacef0df6022?w=1200&q=60',
+    ingredients: [
+      {name: 'Half chicken', shopId: 'chicken1'},
+      {name: 'Spices: ginger, garlic, chicken masala, black pepper, soy sauce'},
+      {name: 'Onions, carrots, capsicum, courgette'},
+      {name: '200 ml water'}
+    ],
+    steps: [
+      'Clean chicken and marinate with spices; fry until golden.',
+      'Add onions and other vegetables; add water and simmer 1–1.5 hours until tender.',
+      'Serve with chapati, rice or ugali.'
+    ],
+    time: '1 hr 30 min'
+  }
+];
 
 <section id="shop">
   <h2>🛒 Student Grocery Store</h2>
